# portfolio_simulations

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  bug_description.md  build.sh  config.toml  geometric_mean_config.toml  notes.md
analysis/: main.py  process.py  py_requirements.txt  statistical_visualization.py  visualization.py
analysis/src/bindings/: assembly_lib.rs  atomic_arb.rs  base_64.rs  fixed_point_math_lib.rs  gaussian.rs  i_portfolio_actions.rs  i_portfolio_struct.rs  ierc20.rs  normal_strategy.rs  normal_strategy_lib.rs  pool_id_lib.rs  portfolio.rs  signed_math.rs  weth.rs
contracts/: AtomicArb.sol  Hackerman.sol
src/: config.rs  data_collection.rs  main.rs  parameters.rs  startup.rs  strategies.rs
src/bindings/: atomic_arb.rs  erc1155.rs  erc1155_token_receiver.rs  exchange_like.rs  geometric_mean_strategy.rs  hackerman.rs  i_normal_strategy.rs  i_portfolio.rs  i_portfolio_accounting.rs  i_portfolio_events.rs  i_portfolio_getters.rs  i_portfolio_registry_actions.rs  i_portfolio_state.rs  i_portfolio_strategy.rs  i_portfolio_view.rs  i_strategy.rs  iweth.rs  math.rs  mod.rs  normal_strategy.rs  normal_strategy_lib.rs  portfolio.rs  portfolio_like.rs  position_renderer.rs  safe_cast_lib.rs  safe_transfer_lib.rs  shared_types.rs  strings.rs  token_like.rs  weth.rs
